test_cases/pass/p44.lxr
SCRIPT AREA
START SCRIPT
DECLARE FLOAT f
f=-3.14
PRINT: f
END SCRIPT
