test_cases/fail/f27.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT score
DECLARE INT score
END SCRIPT
